fonts changed and text aligns fixed

--- a/main.css
+++ b/main.css
@@ -48,6 +48,13 @@ nav a:hover{
     background-color: rgb(246, 241, 235);
 }
 
+h1{
+    font-family: 'Titan One', sans-serif;
+}
+
+h2{
+    font-family: 'Calistoga', serif;
+}
 
 #img2{
     width: 350px;
@@ -58,6 +65,5 @@ nav a:hover{
 }
 
 footer{
-
-
+ text-align: center;
 }
